--- a/financial-app/public/index.html
+++ b/financial-app/public/index.html
@@ -43,5 +43,29 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyCKk-Un-duFEaVk1WtDXZYJp99QFNC4UqY",
+        authDomain: "finance-tracker-eb227.firebaseapp.com",
+        databaseURL: "https://finance-tracker-eb227.firebaseio.com",
+        projectId: "finance-tracker-eb227",
+        storageBucket: "finance-tracker-eb227.appspot.com",
+        messagingSenderId: "345991441874",
+        appId: "1:345991441874:web:84ff7c1a666e231110ec0b",
+        measurementId: "G-ECCKYP08P7",
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
+    <!-- Axios library -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </body>
 </html>
