--- a/public/index.html
+++ b/public/index.html
@@ -2,70 +2,49 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>FINANCE PORTFOLIO :)</title>
+    <style>
+      body {
+        background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+      }
+    </style>
     <script
-      src="https://kit.fontawesome.com/f046bc75fc.js"
+      src="https://kit.fontawesome.com/84347cca93.js"
       crossorigin="anonymous"
     ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-app.js"></script>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
 
     <script>
       // Your web app's Firebase configuration
       var firebaseConfig = {
-        apiKey: "AIzaSyCKk-Un-duFEaVk1WtDXZYJp99QFNC4UqY",
-        authDomain: "finance-tracker-eb227.firebaseapp.com",
-        databaseURL: "https://finance-tracker-eb227.firebaseio.com",
-        projectId: "finance-tracker-eb227",
-        storageBucket: "finance-tracker-eb227.appspot.com",
-        messagingSenderId: "345991441874",
-        appId: "1:345991441874:web:84ff7c1a666e231110ec0b",
-        measurementId: "G-ECCKYP08P7",
+        apiKey: "AIzaSyC-0juF9_M4H-hBSD2nbojfuKR-3Gd9Dsc",
+        authDomain: "finance-database-682aa.firebaseapp.com",
+        databaseURL: "https://finance-database-682aa.firebaseio.com",
+        projectId: "finance-database-682aa",
+        storageBucket: "finance-database-682aa.appspot.com",
+        messagingSenderId: "701594432372",
+        appId: "1:701594432372:web:1ff92eb35e90cea4633221",
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
-      firebase.analytics();
+   
     </script>
-    <!-- Axios library -->
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </body>
 </html>
